testsuite/tests/parser/should_fail/readFail020.stderr

readFail020.hs:3:5:
    parse error in let binding: missing required 'in'
